hphp/test/slow/prop-type-hints/invalid-prop-type2.php.expectf
Fatal error: A type specifier is expected here. in %s/invalid-prop-type2.php on line 5
